# hackathon_Outskill

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  checkpoints.db-shm  checkpoints.db-wal  deep_researcher_skeleton_v3.ipynb  hackathon_achievement_report.md  pyproject.toml  requirements.txt  walkthrough.md
agents/: analysis_agent.py  analyzer_agent.py  insight_agent.py  reflection_agent.py  report_agent.py  retriever_agent.py
core/: __init__.py
deep_researcher/: README.md  agents.py  app.py  graph.py  requirements.txt  state.py
deep_researcher/agents/: analyzer_agent.py  fact_checker_agent.py  multimodal_agent.py  planner_agent.py  reflection_agent.py  report_builder_agent.py  retriever_agent.py  source_reliability_agent.py  visualization_agent.py
deep_researcher/graph/: graph.py  state.py
deep_researcher/temp_faiss_index/: index.faiss  index.pkl
deep_researcher/utils/: llm_utils.py
graph/: state.py  workflow.py
multi_agent_researcher/: README.md
multi_agent_researcher/agents/: __init__.py  critical_analyst.py  insight_generator.py  lead_strategist.py  qa_agent.py  report_builder.py  retriever.py
services/: callbacks.py  db.py  llm.py  rag.py
temp_extract/multi_agent_researcher/: README.md  config.py  main.py
temp_extract/multi_agent_researcher/agents/: critical_analyst.py  insight_generator.py  lead_strategist.py  qa_agent.py  report_builder.py  retriever.py
tests/: conftest.py  test_agents.py  test_schemas.py
tools/: __init__.py  utilities.py  web_search.py
utils/: prompts.py
