[project]
name = "deep-researcher"
version = "0.1.0"
description = "Multi-agent AI deep research assistant — LangGraph + RAG + Multimodal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Team" },
]
keywords = ["langgraph", "langchain", "rag", "multi-agent", "research"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "fastembed>=0.4.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
    "pypdf>=5.0.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.8.0",
    "rich>=13.0.0",
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=5.0.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Repository = "https://github.com/your-org/deep-researcher"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
